--- a/public/caption.html
+++ b/public/caption.html
@@ -8,19 +8,27 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-        <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
-
+        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-tailwind.png">
+        <script src="https://cdn.tailwindcss.com"></script>
         <script src="js/main.js"></script>
     </head>
 
     <body>
+        <!-- 
+            <div class="socialMediaStickySideBar hidden md:fixed md:right-0 md:bottom-1/4 md:w-16 px-2 md:flex md:flex-col z-10 py-2 bg-white">
+                <a href="#" class="my-1"><img src="./metis-assets/icons/facebook-circle.svg" alt=""></a>
+                <a href="#" class="my-1"><img src="./metis-assets/icons/twitter-circle.svg" alt=""></a>
+                <a href="#" class="my-1"><img src="./metis-assets/icons/linkedin-circle.svg" alt=""></a>
+            </div>
+        -->
+
         <section>
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
-                <nav class="flex justify-between items-center py-6">
+                <nav class="flex mx-0 justify-between items-center py-6 xl:mx-24">
                     <a class="text-3xl font-semibold leading-none" href="#">
-                        <img class="w-20" src="metis-assets/images/logo2.svg" alt="" height="auto">
+                        <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto">
                     </a>
                     <div class="lg:hidden">
                         <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
@@ -36,9 +44,11 @@
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">About Us</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
                     </ul>
-                    <div class="hidden lg:block"><a
-                            class="mr-2 inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded"
-                            href="#">Log In</a><a class="inline-block px-4 py-3 text-xs font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a></div>
+                    <div class="hidden lg:block">
+                        <a class="mr-2 inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded"
+                            href="#">Log In</a>
+                        <a class="inline-block px-4 py-3 text-xs font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a>
+                    </div>
                 </nav>
 
                 <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
@@ -46,7 +56,7 @@
                     <nav class="relative flex flex-col py-6 px-6 w-full h-full bg-white border-r overflow-y-auto">
                         <div class="flex items-center mb-8">
                             <a class="mr-auto text-3xl font-semibold leading-none" href="#">
-                                <img class="h-20" src="metis-assets/images/logo2.svg" alt="" width="auto">
+                                <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto">
                             </a>
                             <button class="navbar-close">
                                 <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -72,13 +82,13 @@
                                 <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
                             </p>
                             <a class="inline-block px-1" href="#">
-                                <img src="metis-assets/icons/facebook-blue.svg" alt="">
+                                <img src="./metis-assets/icons/facebook-blue.svg" alt="">
                             </a>
                             <a class="inline-block px-1" href="#">
-                                <img src="metis-assets/icons/twitter-blue.svg" alt="">
+                                <img src="./metis-assets/icons/twitter-blue.svg" alt="">
                             </a>
                             <a class="inline-block px-1" href="#">
-                                <img src="metis-assets/icons/instagram-blue.svg" alt="">
+                                <img src="./metis-assets/icons/instagram-blue.svg" alt="">
                             </a>
                         </div>
                     </nav>
@@ -88,24 +98,34 @@
             </div>
         </section>
 
-        <header class="mx-16 my-8">
+
+
+        <header class="mx-16 lg:mx-32 my-8">
             <div>
-                <p class="font-bold text-slate-400 text-xs">Beta</p>
-                <p class="font-extrabold text-6xl md:text-7xl sm:text-7xl lg:text-7xl">Generate Caption</p>
+                <p class="font-bold text-center md:text-left text-slate-400 text-sm md:text-xs mx-2">Beta</p>
+                <p class="font-bold text-center md:text-left text-6xl md:text-7xl sm:text-7xl lg:text-7xl">Generate Caption</p>
             </div>
         </header>
 
-        <main class="mx-8 lg:my-2">
-            <section class="relative flex flex-wrap">
+        <main class="mx-8 lg:mx-0 lg:my-2">
+            <section class="relative flex flex-wrap w-full">
 
-                <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-8 sm:py-16 lg:py-8">
-                    <form action="" nme="contentForm" class="max-w-xl mb-0 space-y-4">
+                <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
+                    <form action="" nme="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
 
-                        <div>
+                        <!-- Drop Down Menu For Preferred Tone -->
+
+                        <div class="w-full relative">
+
+                            <!-- Drop Down Arrow -->
+
+                            <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none ">
+                                &#8250;
+                            </div>
+
                             <label class="text-gray-700" for="preferredTone">
-                                <select id="preferredTone"
-                                    class="block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-primary-500 focus:border-primary-500"
-                                    name="preferredTone" autocomplete="off">
+                                <select id="preferredTone" class="block font-medium w-full py-2 px-3  focus:outline-purple-500 bg-[#F9FAFC] rounded-md shadow-sm appearance-none" name="preferredTone"
+                                    autocomplete="off">
                                     <option value="" disabled selected>
                                         Select Your Tone
                                     </option>
@@ -143,11 +163,15 @@
                             </label>
                         </div>
 
-                        <div>
-                            <label class="text-gray-700" for="animals">
-                                <select id="animals"
-                                    class="block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-primary-500 focus:border-primary-500"
-                                    name="animals" autocomplete="off">
+                        <!-- Drop Down Menu For Targeted Platform -->
+
+                        <div class="w-full relative">
+                            <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none">
+                                &#8250;
+                            </div>
+                            <label class="text-gray-700 " for="targetedPlatform">
+                                <select id="targetedPlatform" class="block w-full py-2 px-3 bg-[#F9FAFC] rounded-md shadow-sm focus:outline-purple-500 font-medium  appearance-none"
+                                    name="targetedPlatform" autocomplete="off">
                                     <option value="" disabled selected>
                                         Select Targeted Platform
                                     </option>
@@ -167,35 +191,42 @@
                             </label>
                         </div>
 
+
+
                         <div>
-                            <label class="text-gray-700" for="name">
-                                <textarea
-                                    class="appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent"
-                                    id="comment" placeholder="Describe your post in one line. For e.g.: Launching an all new variant of coffee for the youth visiting Grandma's Cafe in the weekends"
-                                    name="comment" rows="4" cols="40"></textarea>
-                            </label>
-                        </div>
-                        <div>
-                            <label class="text-gray-700" for="name">
-                                <input
-                                    class="appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 rounded-md text-base focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent"
-                                    id="comment" placeholder="Name Of Your Business/Organisation" name="nameOfBusiness" rows="4" cols="40" type="text">
+                            <label class="text-gray-700 focus:outline-purple-500 " for="description">
+                                <textarea class="appearance-none  w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium"
+                                    id="description" name="description"
+                                    placeholder="Describe your post in one line. For e.g.: Launching an all new variant of coffee for the youth visiting Grandma's Cafe in the weekends" rows="4"
+                                    cols="40"></textarea>
                             </label>
                         </div>
 
+
+
                         <div>
-                            <label class="text-gray-700" for="name">
+                            <label class="text-gray-700" for="nameOfBusiness">
                                 <input
-                                    class="appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 rounded-md text-base focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent"
-                                    id="comment" placeholder="Word Limit" name="wordLimit" rows="4" cols="40" type="number">
+                                    class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold  rounded-md text-base font-medium focus:outline-purple-500"
+                                    id="nameOfBusiness" placeholder="Name Of Your Business/Organisation" name="nameOfBusiness" rows="4" cols="40" type="text">
+                            </label>
+                        </div>
+
+
+
+                        <div>
+                            <label class="text-gray-700" for="wordLimit">
+                                <input
+                                    class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold  rounded-md text-base focus:outline-purple-500 font-medium"
+                                    id="wordLimit" placeholder="Word Limit" name="wordLimit" rows="4" cols="40" type="number">
                             </label>
                         </div>
 
                         <!-- This checkbox is used to check if we have to generate hashtags too or not -->
 
-                        <div class="flex items-center py-4">
-                            <input type="checkbox" name="isHashtag" id="isHashtag">
-                            <label for="isHashtag" class="text-center align-middle mx-2 "> Generate Hashtags Too?</label>
+                        <div class="flex items-center my-1">
+                            <input type="checkbox" name="isHashtag" id="isHashtag" class="ml-3 ">
+                            <label for="isHashtag" class="text-center align-middle mx-2 font-bold"> Generate Hashtags Too?</label>
                         </div>
 
                         <!-- reset content and create magic button -->
@@ -203,8 +234,9 @@
                         <div class="flex items-center justify-items-center mx-auto">
 
                             <button
-                                class="relative inline-block px-8 py-3 overflow-hidden border rounded-lg border-red-600 group focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white">Reset
-                                Content</button>
+                                class="relative inline-block px-8 py-3 overflow-hidden border rounded-lg border-red-600 group focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white">
+                                Reset Content
+                            </button>
 
                             <button
                                 class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-8 py-3 overflow-hidden border rounded-lg border-indigo-600 group focus:outline-none focus:ring ml-6">
@@ -214,15 +246,15 @@
                     </form>
                 </div>
 
-                <div class="w-full px-4 py-12 lg:w-1/2 sm:px-6 lg:px-8 sm:py-16 lg:py-8">
-                    <div>
-                        <label class="text-gray-700" for="name">
-                            <textarea
-                                class="flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 rounded-md text-base focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent"
-                                id="comment" placeholder="Content is brewing!!" name="content" rows="11" cols="40"></textarea>
-                        </label>
-                    </div>
-                    <div role="alert" class="my-8">
+                <div class="w-full px-4 py-6 lg:w-1/2 lg:px-4 sm:py-8 lg:py-8 ">
+
+                    <label class="text-gray-700" for="content">
+                        <textarea
+                            class="flex-1 appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold  rounded-md text-base focus:outline-purple-500 font-medium lg:w-5/6"
+                            id="content" placeholder="Content is brewing!!" name="content" rows="13" cols="40"></textarea>
+                    </label>
+
+                    <div role="alert" class="mt-8 mb-4 lg:w-5/6">
                         <div class="border border-red-400 rounded bg-red-100 px-4 py-3 text-white-700">
                             <p>Generate Content atleast 2-3 times to get the best results!</p>
                         </div>
@@ -231,12 +263,37 @@
                 </div>
 
             </section>
+
+
+            <!-- Follow Us On Section -->
+
+
+            <!-- 
+                <div class="w-full flex flex-row justify-center md:hidden">
+                    <div class="flex flex-row">
+                        <div>Follow Us On</div>
+                        <div>
+                            <a class="inline-block px-1" href="#">
+                                <img src="./metis-assets/icons/facebook-blue.svg" alt="">
+                            </a>
+                            <a class="inline-block px-1" href="#">
+                                <img src="./metis-assets/icons/instagram-blue.svg" alt="">
+                            </a>
+                            <a class="inline-block px-1" href="#">
+                                <img src="./metis-assets/icons/twitter-blue.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            -->
+
+
         </main>
 
         <section class="how-to-use mx-8">
 
             <!-- Section 1 -->
-            <section class="relative py-16 bg-white min-w-screen animation-fade animation-delay">
+            <section class="relative py-8 md:py-16 bg-white min-w-screen animation-fade animation-delay">
                 <div class="container px-8 mx-auto sm:px-12 xl:px-5">
                     <p class="text-xs font-bold text-left text-purple-500 uppercase sm:mx-6 sm:text-center sm:text-normal sm:font-bold">
                         Got a Question? We’ve got answers.
