--- a/public/caption.html
+++ b/public/caption.html
@@ -194,8 +194,9 @@
 
 
                         <div>
-                            <label class="text-gray-700 focus:outline-purple-500 " for="description">
-                                <textarea class="appearance-none  w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium"
+                            <label class="text-gray-700" for="description">
+                                <textarea
+                                    class="appearance-none  w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium"
                                     id="description" name="description"
                                     placeholder="Describe your post in one line. For e.g.: Launching an all new variant of coffee for the youth visiting Grandma's Cafe in the weekends" rows="4"
                                     cols="40"></textarea>
