--- a/public/blog.html
+++ b/public/blog.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Page title</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <script src="./js/main.js"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
 
-  <head>
-    <title>Page title</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
+    <body class="antialiased bg-body text-body font-body relative">
+        <div class="absolute h-20 px-8 flex w-full items-center">
+            <a class="text-white bg-transparent transition-all hover:bg-[#9c9c9c8c] font-medium rounded-lg text-sm p-3 text-center inline-flex items-center focus:outline-none active:outline-none" href="./blogs.html">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="400.004px" viewBox="0 0 400.004 400.004" style="enable-background: new 0 0 400.004 400.004" class="h-5 w-5">
+                    <path
+                        d="M382.688,182.686H59.116l77.209-77.214c6.764-6.76,6.764-17.726,0-24.485c-6.764-6.764-17.73-6.764-24.484,0L5.073,187.757 c-6.764,6.76-6.764,17.727,0,24.485l106.768,106.775c3.381,3.383,7.812,5.072,12.242,5.072c4.43,0,8.861-1.689,12.242-5.072
+		c6.764-6.76,6.764-17.726,0-24.484l-77.209-77.218h323.572c9.562,0,17.316-7.753,17.316-17.315
+		C400.004,190.438,392.251,182.686,382.688,182.686z"
+                        fill="#ffffff"
+                        stroke-width="4"
+                    />
+                </svg>
+                <p class="pl-2 hidden md:inline">Go Back</p>
+            </a>
+        </div>
 
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-tailwind.png">
-    <script src="js/main.js"></script>
-  </head>
-
-  <body class="antialiased bg-body text-body font-body">
-    <div class="">
-
-      <section class="pb-20">
-        <div class="pt-20 pb-8 mb-12 bg-cover bg-no-repeat"
-          style="background-image: url('https://images.unsplash.com/photo-1603665330306-dd1a67e0cc4e?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1280&amp;q=80&amp;blend=fe8484&amp;sat=-80&amp;blend-mode=multiply')">
-          <div class="container px-4 mx-auto">
-            <div class="max-w-2xl mx-auto">
-              <div class="text-center mb-6">
-                <span class="text-base md:text-lg">
-                  <a class="text-blueGray-200 hover:underline" href="#">CATEGORY</a>
-                  <span class="text-blueGray-200">24 Jan, 2020</span>
-                </span>
-                <h2 class="text-4xl md:text-5xl mt-4 text-white font-bold font-heading">Curabitur vestibulum odio maximus ipsum</h2>
-              </div>
-              <div class="flex justify-center mb-8">
-                <img class="w-12 h-12 object-cover rounded-full"
-                  src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60" alt="">
-                <div class="pl-4">
-                  <p class="text-blueGray-100 mb-1">Alice Bradley</p>
-                  <p class="text-xs text-blueGray-200 font-semibold">Author</p>
+        <section class="pb-20">
+            <div class="pt-20 pb-8 mb-12 bg-cover bg-no-repeat" style="background-image: url('https://images.unsplash.com/photo-1603665330306-dd1a67e0cc4e?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1280&amp;q=80&amp;blend=fe8484&amp;sat=-80&amp;blend-mode=multiply')">
+                <div class="container px-4 mx-auto">
+                    <div class="max-w-2xl mx-auto">
+                        <div class="text-center mb-6">
+                            <span class="text-base md:text-lg">
+                                <a class="text-blueGray-200 hover:underline" href="#">CATEGORY</a>
+                                <span class="text-blueGray-200">24 Jan, 2020</span>
+                            </span>
+                            <h2 class="text-4xl md:text-5xl mt-4 text-white font-bold font-heading">Curabitur vestibulum odio maximus ipsum</h2>
+                        </div>
+                        <div class="flex justify-center mb-8">
+                            <img class="w-12 h-12 object-cover rounded-full" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60" alt="" />
+                            <div class="pl-4">
+                                <p class="text-blueGray-100 mb-1">Alice Bradley</p>
+                                <p class="text-xs text-blueGray-200 font-semibold">Author</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="container px-4 mx-auto">
-          <div class="max-w-2xl mx-auto">
-            <p class="mb-6 leading-loose text-blueGray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo est eget consequat imperdiet. Suspendisse laoreet scelerisque
-              lobortis. Mauris facilisis hendrerit nulla at vehicula. Suspendisse potenti. Ut in nulla a purus bibendum convallis. Suspendisse id nunc maximus, suscipit nte ac, vulputate massa. Sed ut
-              nunc suscipit, bibendum arcu a, interdum elit. Nullam laoreet mollis dictum. Ut suscipit, magna at elementum iaculis, erat erat fermentum justo, sit amet ultrices enim leo sit amet
-              purus. Nulla sed erat molestie, auctor mauris lobortis, iaculis justo.</p>
-            <p class="leading-loose text-blueGray-400">Duis hendrerit dui in dui ornare luctus. Nullam gravida tincidunt lorem cursus suscipit. Integer scelerisque sem et sem porta, eu volutpat mi
-              tempor. Duis interdum sodales lacus non tempor. Nam mattis, sapien a commodo ultrices, nunc orci tincidunt ante, tempus tempus turpis metus laoreet lacus. Praesent condimentum, arcu ut
-              fringilla tincidunt, augue diam pretium augue, sit amet vestibulum nunc felis vel metus. Duis dolor nulla, pellentesque non ultrices ut, convallis eu felis. Duis luctus tempor arcu,
-              vitae elementum massa porta non. Morbi aliquet, neque ut volutpat sodales, dui enim facilisis enim, ut dictum lacus neque in urna. Nam metus elit, ullamcorper pretium nisi at, aliquet
-              gravida lectus. Nullam id lectus pellentesque, suscipit dolor eget, consequat velit. Pellentesque finibus commodo nisl, id interdum leo. Maecenas aliquam felis justo, ut sagittis nunc
-              maximus ut.</p>
-          </div>
-        </div>
-      </section>
-    </div>
-  </body>
-
+            <div class="container px-4 mx-auto">
+                <div class="max-w-2xl px-4 md:px-0 mx-auto">
+                    <p class="mb-6 leading-loose text-blueGray-400">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo est eget consequat imperdiet. Suspendisse laoreet scelerisque lobortis. Mauris facilisis hendrerit nulla at vehicula. Suspendisse potenti. Ut in nulla a purus bibendum convallis. Suspendisse id nunc
+                        maximus, suscipit nte ac, vulputate massa. Sed ut nunc suscipit, bibendum arcu a, interdum elit. Nullam laoreet mollis dictum. Ut suscipit, magna at elementum iaculis, erat erat fermentum justo, sit amet ultrices enim leo sit amet purus. Nulla sed erat molestie, auctor mauris
+                        lobortis, iaculis justo.
+                    </p>
+                    <p class="leading-loose text-blueGray-400">
+                        Duis hendrerit dui in dui ornare luctus. Nullam gravida tincidunt lorem cursus suscipit. Integer scelerisque sem et sem porta, eu volutpat mi tempor. Duis interdum sodales lacus non tempor. Nam mattis, sapien a commodo ultrices, nunc orci tincidunt ante, tempus tempus turpis
+                        metus laoreet lacus. Praesent condimentum, arcu ut fringilla tincidunt, augue diam pretium augue, sit amet vestibulum nunc felis vel metus. Duis dolor nulla, pellentesque non ultrices ut, convallis eu felis. Duis luctus tempor arcu, vitae elementum massa porta non. Morbi
+                        aliquet, neque ut volutpat sodales, dui enim facilisis enim, ut dictum lacus neque in urna. Nam metus elit, ullamcorper pretium nisi at, aliquet gravida lectus. Nullam id lectus pellentesque, suscipit dolor eget, consequat velit. Pellentesque finibus commodo nisl, id interdum
+                        leo. Maecenas aliquam felis justo, ut sagittis nunc maximus ut.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
