--- a/public/signin.html
+++ b/public/signin.html
@@ -1,80 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Sign In | Writee</title>
 
-  <head>
-    <title>Sign In | Writee</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
 
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-tailwind.png">
-    <script src="js/main.js"></script>
-  </head>
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
+        <link rel="icon" type="image/png" sizes="16x16" href=",/favicon-tailwind.png" />
 
-  <body class="antialiased bg-body text-body font-body">
-    <div class="">
+        <script src="./js/main.js"></script>
+    </head>
 
-      <section class="relative pb-20">
-        <div class="hidden lg:block absolute inset-0 w-1/2 ml-auto bg-indigo-600">
-          <div class="flex items-center h-full">
-            <img class="lg:max-w-lg mx-auto" src="metis-assets/illustrations/walk-dog.png" alt="">
-          </div>
-        </div>
-        <div class="container px-4 mx-auto">
-          <div class="relative flex flex-wrap">
-            <div class="lg:flex lg:flex-col w-full lg:w-1/2 py-6 lg:pr-20">
-              <div class="flex justify-between items-center w-full mb-12 lg:mb-20">
-                <a class="text-3xl font-semibold leading-none" href="#">
-                  <img class="h-20" src="metis-assets/images/logo2.svg" alt="" width="auto">
-                </a>
-                <a class="inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Sign Up</a>
-              </div>
-              <div class="w-full max-w-lg mx-auto lg:mx-0 my-auto">
-                <span class="text-sm text-blueGray-400">Sign In</span>
-                <h4 class="mb-6 text-3xl">Brew Magical Content</h4>
-                <div class="flex mb-4 px-4 bg-blueGray-50 rounded">
-                  <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="email" placeholder="name@email.com">
-                  <svg class="h-6 w-6 ml-4 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207">
-                    </path>
-                  </svg>
+    <body class="antialiased bg-body text-body font-body min-h-screen">
+        <section class="relative">
+            <div class="hidden lg:block absolute inset-0 w-1/2 ml-auto h-screen bg-indigo-600">
+                <div class="flex items-center h-full">
+                    <img class="lg:max-w-lg mx-auto" src="./metis-assets/illustrations/walk-dog.png" alt="" />
                 </div>
-                <div class="flex mb-6 px-4 bg-blueGray-50 rounded">
-                  <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="password" placeholder="Enter your password">
-                  <button class="ml-4">
-                    <svg class="h-6 w-6 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z">
-                      </path>
-                    </svg>
-                  </button>
-                </div>
-                <button class="block w-full p-4 text-center text-xs text-white font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded">Sign
-                  In</button>
-                <p class="my-6 text-xs text-blueGray-400 text-center">or continue with</p>
-                <button class="flex items-center w-full px-4 py-3 mb-2 text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
-                  <img class="h-6 pr-10" src="metis-assets/logos/facebook-sign.svg">
-                  <span>Sign In with Facebook</span>
-                </button>
-                <button class="flex items-center px-4 py-3 w-full text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
-                  <img class="h-6 pr-10" src="metis-assets/logos/google-sign.svg">
-                  <span>Sign In with Google</span>
-                </button>
-              </div>
-              <div>
-                <p class="mt-8 text-xs text-blueGray-400 text-center lg:text-left"><a class="underline hover:text-blueGray-500" href="#">Police privacy</a> and <a
-                    class="underline hover:text-blueGray-500" href="#">Terms of Use</a></p>
-              </div>
             </div>
-          </div>
-        </div>
-      </section>
-    </div>
-  </body>
-
+            <div class="container px-4 mx-auto">
+                <div class="relative flex flex-wrap">
+                    <div class="lg:flex lg:flex-col w-full lg:w-1/2 py-6 lg:pr-20">
+                        <div class="flex justify-between items-center w-full mb-12 lg:mb-20">
+                            <a class="text-3xl font-semibold leading-none" href="../index.html">
+                                <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
+                            </a>
+                            <a class="inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="./signup.html">Sign Up</a>
+                        </div>
+                        <div class="w-full max-w-lg mx-auto lg:mx-0 my-auto">
+                            <span class="text-sm text-blueGray-400">Sign In</span>
+                            <h4 class="mb-6 text-3xl">Brew Magical Content</h4>
+                            <div class="flex mb-4 px-4 bg-blueGray-50 rounded">
+                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="email" placeholder="name@email.com" />
+                                <svg class="h-6 w-6 ml-4 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"></path>
+                                </svg>
+                            </div>
+                            <div class="flex mb-6 px-4 bg-blueGray-50 rounded">
+                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="password" placeholder="Enter your password" />
+                                <button class="ml-4">
+                                    <svg class="h-6 w-6 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+                                    </svg>
+                                </button>
+                            </div>
+                            <button class="block w-full p-4 text-center text-xs text-white font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded">Sign In</button>
+                            <p class="my-6 text-xs text-blueGray-400 text-center">or continue with</p>
+                            <button class="flex items-center w-full px-4 py-3 mb-2 text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
+                                <img class="h-6 pr-10" src="./metis-assets/logos/facebook-sign.svg" />
+                                <span>Sign In with Facebook</span>
+                            </button>
+                            <button class="flex items-center px-4 py-3 w-full text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
+                                <img class="h-6 pr-10" src="./metis-assets/logos/google-sign.svg" />
+                                <span>Sign In with Google</span>
+                            </button>
+                        </div>
+                        <div>
+                            <p class="mt-8 text-xs text-blueGray-400 text-center lg:text-left"><a class="underline hover:text-blueGray-500" href="#">Police privacy</a> and <a class="underline hover:text-blueGray-500" href="#">Terms of Use</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
