--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
+        <link rel="stylesheet" href="./public/css/output.css" />
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
 
-        <script src="./js/main.js"></script>
+        <script src="./public/js/main.js"></script>
     </head>
 
     <body class="antialiased bg-body text-body font-body">
@@ -495,19 +496,19 @@
                 </div>
 
                 <!-- <div class="lg:hidden text-center">
-                    <p class="text-xs text-blueGray-400">&copy; 2020. All rights reserved.</p>
-                    <div class="-mx-2 mt-4">
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                        </a>
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                        </a>
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                        </a>
-                    </div>
-                </div> -->
+					<p class="text-xs text-blueGray-400">&copy; 2020. All rights reserved.</p>
+					<div class="-mx-2 mt-4">
+						<a class="inline-block px-2" href="#">
+							<img src="./metis-assets/icons/facebook-blue.svg" alt="" />
+						</a>
+						<a class="inline-block px-2" href="#">
+							<img src="./metis-assets/icons/twitter-blue.svg" alt="" />
+						</a>
+						<a class="inline-block px-2" href="#">
+							<img src="./metis-assets/icons/instagram-blue.svg" alt="" />
+						</a>
+					</div>
+				</div> -->
             </div>
             <div class="block w-full pb-4 px-4 border-t border-gray-300">
                 <div class="flex lg:flex-row justify-between items-center flex-col">
